chore: remove darwin 386

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,9 @@ jobs:
       matrix:
         os: ["linux", "darwin", "windows"]
         arch: ["386", "amd64"]
+        exclude:
+          - os: darwin
+            arch: "386"
     steps:
       - name: Set up Go 1.17
         uses: actions/setup-go@v1
